--- a/.env.example
+++ b/.env.example
@@ -27,8 +27,11 @@ DB_CONNECTION=mysql
 # DB_USERNAME=root
 # DB_PASSWORD=
 
+# Session Configuration
+# SESSION_DRIVER: Store sessions in database for persistence
+# SESSION_LIFETIME: Session lifetime in minutes (480 = 8 hours)
 SESSION_DRIVER=database
-SESSION_LIFETIME=120
+SESSION_LIFETIME=480
 SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
